@@ -1,0 +1,1 @@
+The TURN Server is a VoIP media traffic NAT traversal server
