@@ -1,0 +1,100 @@
+@comment $NetBSD: PLIST,v 1.1 2025/01/15 14:13:39 manu Exp $
+bin/turnadmin
+bin/turnserver
+bin/turnutils_natdiscovery
+bin/turnutils_oauth
+bin/turnutils_peer
+bin/turnutils_stunclient
+bin/turnutils_uclient
+etc/turnserver.conf.default
+include/turn/client/TurnMsgLib.h
+include/turn/client/ns_turn_ioaddr.h
+include/turn/client/ns_turn_msg.h
+include/turn/client/ns_turn_msg_addr.h
+include/turn/client/ns_turn_msg_defs.h
+include/turn/client/ns_turn_msg_defs_experimental.h
+include/turn/ns_turn_defs.h
+lib/libturnclient.a
+man/man1/coturn.1
+man/man1/turnadmin.1
+man/man1/turnserver.1
+man/man1/turnutils.1
+man/man1/turnutils_natdiscovery.1
+man/man1/turnutils_oauth.1
+man/man1/turnutils_peer.1
+man/man1/turnutils_stunclient.1
+man/man1/turnutils_uclient.1
+share/doc/coturn/INSTALL
+share/doc/coturn/LICENSE
+share/doc/coturn/README.turnadmin
+share/doc/coturn/README.turnserver
+share/doc/coturn/README.turnutils
+share/doc/coturn/postinstall.txt
+share/doc/coturn/schema.mongo.sh
+share/doc/coturn/schema.sql
+share/doc/coturn/schema.stats.redis
+share/doc/coturn/schema.userdb.redis
+share/examples/coturn/etc/cacert.pem
+share/examples/coturn/etc/coturn.service
+share/examples/coturn/etc/turn_client_cert.pem
+share/examples/coturn/etc/turn_client_pkey.pem
+share/examples/coturn/etc/turn_server_cert.pem
+share/examples/coturn/etc/turn_server_pkey.pem
+share/examples/coturn/etc/turnserver.conf
+share/examples/coturn/scripts/basic/dos_attack.sh
+share/examples/coturn/scripts/basic/relay.sh
+share/examples/coturn/scripts/basic/tcp_client.sh
+share/examples/coturn/scripts/basic/tcp_client_c2c_tcp_relay.sh
+share/examples/coturn/scripts/basic/udp_c2c_client.sh
+share/examples/coturn/scripts/basic/udp_client.sh
+share/examples/coturn/scripts/loadbalance/master_relay.sh
+share/examples/coturn/scripts/loadbalance/slave_relay_1.sh
+share/examples/coturn/scripts/loadbalance/slave_relay_2.sh
+share/examples/coturn/scripts/loadbalance/tcp_c2c_tcp_relay.sh
+share/examples/coturn/scripts/loadbalance/udp_c2c.sh
+share/examples/coturn/scripts/longtermsecure/secure_dos_attack.sh
+share/examples/coturn/scripts/longtermsecure/secure_dtls_client.sh
+share/examples/coturn/scripts/longtermsecure/secure_dtls_client_cert.sh
+share/examples/coturn/scripts/longtermsecure/secure_relay.sh
+share/examples/coturn/scripts/longtermsecure/secure_relay_cert.sh
+share/examples/coturn/scripts/longtermsecure/secure_sctp_client.sh
+share/examples/coturn/scripts/longtermsecure/secure_tcp_client.sh
+share/examples/coturn/scripts/longtermsecure/secure_tcp_client_c2c_tcp_relay.sh
+share/examples/coturn/scripts/longtermsecure/secure_tls_client.sh
+share/examples/coturn/scripts/longtermsecure/secure_tls_client_c2c_tcp_relay.sh
+share/examples/coturn/scripts/longtermsecure/secure_tls_client_cert.sh
+share/examples/coturn/scripts/longtermsecure/secure_udp_c2c.sh
+share/examples/coturn/scripts/longtermsecure/secure_udp_client.sh
+share/examples/coturn/scripts/longtermsecuredb/secure_relay_with_db_mongo.sh
+share/examples/coturn/scripts/longtermsecuredb/secure_relay_with_db_mysql.sh
+share/examples/coturn/scripts/longtermsecuredb/secure_relay_with_db_mysql_ssl.sh
+share/examples/coturn/scripts/longtermsecuredb/secure_relay_with_db_psql.sh
+share/examples/coturn/scripts/longtermsecuredb/secure_relay_with_db_redis.sh
+share/examples/coturn/scripts/longtermsecuredb/secure_relay_with_db_sqlite.sh
+share/examples/coturn/scripts/mobile/mobile_dtls_client.sh
+share/examples/coturn/scripts/mobile/mobile_relay.sh
+share/examples/coturn/scripts/mobile/mobile_tcp_client.sh
+share/examples/coturn/scripts/mobile/mobile_tls_client_c2c_tcp_relay.sh
+share/examples/coturn/scripts/mobile/mobile_udp_client.sh
+share/examples/coturn/scripts/oauth.sh
+share/examples/coturn/scripts/pack.sh
+share/examples/coturn/scripts/peer.sh
+share/examples/coturn/scripts/readme.txt
+share/examples/coturn/scripts/restapi/secure_relay_secret.sh
+share/examples/coturn/scripts/restapi/secure_relay_secret_with_db_mongo.sh
+share/examples/coturn/scripts/restapi/secure_relay_secret_with_db_mysql.sh
+share/examples/coturn/scripts/restapi/secure_relay_secret_with_db_psql.sh
+share/examples/coturn/scripts/restapi/secure_relay_secret_with_db_redis.sh
+share/examples/coturn/scripts/restapi/secure_relay_secret_with_db_sqlite.sh
+share/examples/coturn/scripts/restapi/secure_udp_client_with_secret.sh
+share/examples/coturn/scripts/restapi/shared_secret_maintainer.pl
+share/examples/coturn/scripts/selfloadbalance/secure_dos_attack.sh
+share/examples/coturn/scripts/selfloadbalance/secure_relay.sh
+share/turnserver/schema.mongo.sh
+share/turnserver/schema.sql
+share/turnserver/schema.stats.redis
+share/turnserver/schema.userdb.redis
+share/turnserver/testmongosetup.sh
+share/turnserver/testredisdbsetup.sh
+share/turnserver/testsqldbsetup.sql
+@pkgdir var/turnserver
